some validation changes
