# validations/auction_validation.js
@@ -3,7 +3,7 @@ const joi = require('joi')
 const startAuctionValidation = (data) => {
     const schemaValidation = joi.object({
         item_id: joi.string().required().max(24),
-        auction_duration: joi.number().required().min(1).max(30),
+        auction_end_date: joi.string().required(),
     })
     return schemaValidation.validate(data)
 }
@@ -14,6 +14,8 @@ const postBidValidation = (data) => {
     })
     return schemaValidation.validate(data)
 }
+
+
 
 module.exports.startAuctionValidation = startAuctionValidation
 module.exports.postBidValidation = postBidValidation
